<resources>
    <string name="app_name">StoryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_password">Password must be use 8 Character</string>
    <string name="error_email">Email must be use valid format</string>
    <string name="welcome_login">Welcome Back!</string>
    <string name="welcome_register">Welcome to StoryApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="text_validation">Don’t have account? <u><b>Sign Up</b></u></string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="story_image">Story Image</string>
    <string name="add_story">Add Story</string>
    <string name="failed_load_data">Failed Load Data</string>
    <string name="failed_to_load_data">Request Timeout</string>
    <string name="menu_home">Home</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_settings">Settings</string>
    <string name="change_language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Setting</string>
    <string name="detail">Detail</string>
    <string name="title_add_story">Add Story</string>
    <string name="hint_description">Description</string>
    <string name="button_take_picture">Button take picture</string>
    <string name="button_gallery">Button gallery</string>
    <string name="button_post">Post</string>
    <string name="email_field_empty">Email field empty!</string>
    <string name="password_field_empty">Password field empty!</string>
    <string name="error_fetching">Error Fetching</string>
    <string name="hello_it">Hello, %1$s!</string>
    <string name="error_uploading_story">Error uploading story</string>
    <string name="you_are_going_to_be_logged_out_from_the_app">You are going to be logged out from the app</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="can_t_find_style">Can\'t find style. %1$s</string>
    <string name="location">Location</string>
    <string name="location_is_not_found_try_again">Location is not found, Try Again</string>
    <string name="error">Error</string>
</resources>