<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink_500">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/baseline_arrow_back"
            app:navigationIconTint="@color/white"
            app:title="@string/title_add_story"
            app:titleTextAppearance="@style/ToolbarTitle" />

    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <EditText
            android:id="@+id/edt_add_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/gallery_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            android:background="@color/pink_500"
            android:contentDescription="@string/button_gallery"
            android:src="@drawable/baseline_galery_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/camera_button"
            app:layout_constraintTop_toBottomOf="@+id/edt_add_description"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:background="@color/pink_500"
            android:contentDescription="@string/button_take_picture"
            android:src="@drawable/baseline_photo_camera_24"
            app:layout_constraintStart_toEndOf="@+id/gallery_button"
            app:layout_constraintTop_toBottomOf="@+id/edt_add_description"
            app:tint="@color/white" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/camera_button"
            app:layout_constraintTop_toBottomOf="@+id/edt_add_description"
            app:layout_constraintBottom_toTopOf="@+id/iv_storyImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:thumbTint="@color/pink_500"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@+id/sm_location"
            app:layout_constraintStart_toEndOf="@+id/camera_button"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_storyImage"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/story_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gallery_button"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_post"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/pink_600"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/button_post"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <include
            android:id="@+id/loading_button"
            layout="@layout/loading_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btn_post"
            app:layout_constraintEnd_toEndOf="@id/btn_post"
            app:layout_constraintStart_toStartOf="@id/btn_post"
            app:layout_constraintTop_toTopOf="@id/btn_post" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>